--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -2,7 +2,9 @@
   font-family: monospace;
   background: papayawhip;
   display: flex;
+  justify-content: space-between;
   align-items: center;
+  padding: 10px;
 }
 
 .logo {
@@ -16,7 +18,13 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  justify-content: space-around;
+  margin: 0;
+  padding: 0;
+  gap: 8px;
 }
+
 
 a {
   font-size: 22px;
@@ -25,3 +33,4 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
