--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,8 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -20,6 +22,14 @@ body {
   border-radius: 50%;
   width: 48px;
   height:  48px;
+  margin: 8px;
+}
+
+.left,
+.right {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .logo {
@@ -27,6 +37,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin-left: 8px;
 }
 
 button {
@@ -45,4 +56,12 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 12px;
+  padding: 0;
+  margin-left: 10px;
+}
+
+.links {
+
 }
