Change header and footer to display: flex:

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,26 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+ul {
+  margin: 10px;
+  padding: 0;
+  list-style-type: none;
+}
+
+a {
+  color: rgb(90, 90, 90);
+  text-decoration: none;
+}
+
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.left-links,
+.right-links {
+  display: flex;
+  gap: 10px;
+}
