--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between
 }
 
 img {
@@ -27,7 +30,7 @@ input {
 }
 
 ul {
-  margin: 10px;
+  margin: 20px;
   padding: 0;
   list-style-type: none;
 }
@@ -37,14 +40,28 @@ a {
   text-decoration: none;
 }
 
+button {
+  padding: 8px 16px;
+}
+
 .header,
 .footer {
   display: flex;
   justify-content: space-between;
 }
 
+.footer {
+  background-color: rgb(235, 235, 235);
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .left-links,
 .right-links {
   display: flex;
-  gap: 10px;
+  gap: 20px;
 }
