--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -4,6 +4,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  flex: 1;
 }
 
 .header {
@@ -19,7 +20,7 @@ body {
 
 .center {
   display: flex;
-  flex-grow: 1;
+
 }
 
 .card-container {
